--- a/index.html
+++ b/index.html
@@ -1590,7 +1590,7 @@ textarea{
             }
           };
 
-          xhr.send(this.data);
+          //xhr.send(this.data);
         } catch (e) {
           // Need to defer since .create() is called directly from the constructor
           // and thus the 'error' event can only be only bound *after* this exception
