--- a/index.html
+++ b/index.html
@@ -1392,7 +1392,7 @@ textarea{
   function empty() {}
 
   var hasXHR2 = function () {
-    var xhr = new XMLHttpRequest$1({
+    var xhr = new XMLHttpRequest({
       xdomain: false
     });
     return null != xhr.responseType;
